[metadata]
name = ruck
summary = Debian Image Builder
description-file =
    README.rst
author = Chuck Short 
author-email = charles.short@windriver.com
home-page = https://github.com/zulcss/ruck
python-requires = >=3.6
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    ruck

[entry_points]
console_scripts = 
    ruck = ruck.cmd.shell:main